# ledger-app-west

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  python3-deps.txt
.github/workflows/: ci-workflow.yml  lint-workflow.yml
doc/: COMMANDS.md
example/: index.js
python/: ledger-west.py
src/: main.c  main.h  utils.c  utils.h
src/crypto/: base58.c  blake2_common.h  ledger_crypto.c  ledger_crypto.h  stream_eddsa_sign.c  stream_eddsa_sign.h  waves.c  waves.h
src/sodium/: keypair.c
src/sodium/private/: ed25519_ref10.c  ed25519_ref10.h  ed25519_ref10_fe_25_5.c
src/sodium/private/fe_25_5/: base.h  constants.h  fe.c
src/ui/: print_amount.h  ui.c  ui.h  ui_logic.c  ui_logic.h
src/ui/blue/: ui_menus_blue.h  ui_menus_blue_prepro.c  ui_menus_blue_prepro.h
src/ui/nanox/: ui_menus_nanox.h
src/ui/transactions/: transfer.c  transfer.h
tests/: README.md  conftest.py  requirements.txt  test_appname_cmd.py  test_appversion_cmd.py  test_error_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_status_word.py
tests-jest/: constants.js  jest.config.js  package.json  setup.js  teardown.js
tests-jest/src/: error_cases.test.js  get_address_data.test.js  get_appname.test.js  get_pubkey.test.js  get_version.test.js  sign_tx.test.js
tests/app_client/: app_cmd.py  app_cmd_builder.py
tests/app_client/exception/: device_exception.py  errors.py
unit-tests/: CMakeLists.txt  test_base58.c  test_ed25519.c  test_utils.c
